--- a/web/menu/style.css
+++ b/web/menu/style.css
@@ -20,7 +20,10 @@
 
 body {
 	cursor: url('../b.png'),auto;
-	background-color: burlywood;
+	/* background-color: burlywood; */
+	/* background-color: #000; */
+	/* background: url(../2.png) no-repeat center;
+	background-size: 95% 136%; */
 }
 
 input[type="checkbox"] {
@@ -28,6 +31,7 @@ input[type="checkbox"] {
 	-moz-appearance: none;
 	appearance: none;
 	outline: none;
+	/* cursor: pointer; */
 }
 
 input[type="checkbox"]::before {
@@ -68,7 +72,6 @@ body {
 	width: 100%;
 	display: flex;
 }
-
 #main {
 	width: 100%;
 	/* height: 920px; */
@@ -77,6 +80,7 @@ body {
 	/* <img src="../assets/img/icon/盘子.png" alt="" style="display: inline; width:150px; height: 150px; transform: translate(800px,840px);"> */
 	/* background: url('../assets/img/icon/盘子.png') no-repeat center bottom; */
 	background-color: #FFFFFF;
+	/* background: url(../2.png) no-repeat; */
 	background-position-y: calc(110%);
 	/* background-position: 800px 840px; */
 	background-size: 150px;
@@ -197,6 +201,7 @@ body {
 
 	display: flex;
 	align-items: flex-start;
+	position: relative;
 }
 
 input {
